Fixed Menu bar. Bug was Overflow:hidden in global selector CSS styles.BUG or logical oversight in attribute point feature and validation alerts.

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,9 @@ center the thing bomb
   --text_color: rgba(255, 255, 255, 1);
   --text_color_contrast: rgba(0, 0, 0, 1);
 
-  --main-bg: #43474d;
+  --main-bg: #94bfff;
   --top-menu-bg: hsl(209, 63%, 23%);
-  --sub-menu-bg: hsl(0, 0%, 100%);
+  --sub-menu-bg: rgb(30, 79, 126);
 
   /* 
   Shadow boxing edits
@@ -45,7 +45,6 @@ center the thing bomb
   padding: 0;
   box-sizing: border-box;
   color: white;
-  overflow: hidden;
   /*   box-shadow: var(--shadowbox_color) var(--shadowbox_bound),
     var(--shadowbox_color) var(--shadowbox_reach),
     var(--shadowbox_color) var(--shadowbox_reach),
@@ -257,12 +256,14 @@ header,
   transition: top 0.5s ease-out;
 }
 #sub-menu a:hover {
-  background-color: var(--top-menu-bg);
+  background-color: var(--sub-menu-bg);
 }
 
 .flex-around {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-flow: row;
+
 }
 
